#
#  qwt project
#
project(qwt)

set( INC_FILES 
	src/qwt_text.h
	src/qwt_text_engine.h
	src/qwt_text_label.h
	src/qwt_thermo.h
	src/qwt_valuelist.h
	src/qwt_wheel.h
	src/qwt_counter.h
	src/qwt_curve_fitter.h
	src/qwt_data.h
	src/qwt_dial.h
	src/qwt_dial_needle.h
	src/qwt_double_interval.h
	src/qwt_double_range.h
	src/qwt_double_rect.h
	src/qwt_dyngrid_layout.h
	src/qwt_event_pattern.h
	src/qwt_global.h
	src/qwt_interval_data.h
	src/qwt_knob.h
	src/qwt_layout_metrics.h
	src/qwt_legend.h
	src/qwt_legend_item.h
	src/qwt_legend_itemmanager.h
	src/qwt_magnifier.h
	src/qwt_math.h
	src/qwt_paint_buffer.h
	src/qwt_painter.h
	src/qwt_panner.h
	src/qwt_picker.h
	src/qwt_picker_machine.h
	src/qwt_plot.h
	src/qwt_plot_canvas.h
	src/qwt_plot_curve.h
	src/qwt_plot_dict.h
	src/qwt_plot_grid.h
	src/qwt_plot_item.h
	src/qwt_plot_layout.h
	src/qwt_plot_magnifier.h
	src/qwt_plot_marker.h
	src/qwt_plot_panner.h
	src/qwt_plot_picker.h
	src/qwt_plot_printfilter.h
	src/qwt_plot_rasteritem.h
	src/qwt_plot_rescaler.h
	src/qwt_plot_scaleitem.h
	src/qwt_plot_spectrogram.h
	src/qwt_plot_svgitem.h
	src/qwt_plot_zoomer.h
	src/qwt_polygon.h
	src/qwt_raster_data.h
	src/qwt_round_scale_draw.h
	src/qwt_scale_div.h
	src/qwt_scale_draw.h
	src/qwt_scale_engine.h
	src/qwt_scale_map.h
	src/qwt_scale_widget.h
	src/qwt_slider.h
	src/qwt_spline.h
	src/qwt_symbol.h
	src/qwt.h
	src/qwt_abstract_scale.h
	src/qwt_abstract_scale_draw.h
	src/qwt_abstract_slider.h
	src/qwt_analog_clock.h
	src/qwt_array.h
	src/qwt_arrow_button.h
	src/qwt_clipper.h
	src/qwt_color_map.h
	src/qwt_compass.h
	src/qwt_compass_rose.h
   )
set( SRC_FILES 
	src/qwt_text_engine.cpp
	src/qwt_text_label.cpp
	src/qwt_thermo.cpp
	src/qwt_wheel.cpp
	src/qwt_counter.cpp
	src/qwt_curve_fitter.cpp
	src/qwt_data.cpp
	src/qwt_dial.cpp
	src/qwt_dial_needle.cpp
	src/qwt_double_interval.cpp
	src/qwt_double_range.cpp
	src/qwt_double_rect.cpp
	src/qwt_dyngrid_layout.cpp
	src/qwt_event_pattern.cpp
	src/qwt_interval_data.cpp
	src/qwt_knob.cpp
	src/qwt_layout_metrics.cpp
	src/qwt_legend.cpp
	src/qwt_legend_item.cpp
	src/qwt_magnifier.cpp
	src/qwt_math.cpp
	src/qwt_paint_buffer.cpp
	src/qwt_painter.cpp
	src/qwt_panner.cpp
	src/qwt_picker.cpp
	src/qwt_picker_machine.cpp
	src/qwt_plot.cpp
	src/qwt_plot_axis.cpp
	src/qwt_plot_canvas.cpp
	src/qwt_plot_curve.cpp
	src/qwt_plot_dict.cpp
	src/qwt_plot_grid.cpp
	src/qwt_plot_item.cpp
	src/qwt_plot_layout.cpp
	src/qwt_plot_magnifier.cpp
	src/qwt_plot_marker.cpp
	src/qwt_plot_panner.cpp
	src/qwt_plot_picker.cpp
	src/qwt_plot_print.cpp
	src/qwt_plot_printfilter.cpp
	src/qwt_plot_rasteritem.cpp
	src/qwt_plot_rescaler.cpp
	src/qwt_plot_scaleitem.cpp
	src/qwt_plot_spectrogram.cpp
	src/qwt_plot_svgitem.cpp
	src/qwt_plot_xml.cpp
	src/qwt_plot_zoomer.cpp
	src/qwt_raster_data.cpp
	src/qwt_round_scale_draw.cpp
	src/qwt_scale_div.cpp
	src/qwt_scale_draw.cpp
	src/qwt_scale_engine.cpp
	src/qwt_scale_map.cpp
	src/qwt_scale_widget.cpp
	src/qwt_slider.cpp
	src/qwt_spline.cpp
	src/qwt_symbol.cpp
	src/qwt_text.cpp
	src/qwt_abstract_scale.cpp
	src/qwt_abstract_scale_draw.cpp
	src/qwt_abstract_slider.cpp
	src/qwt_analog_clock.cpp
	src/qwt_arrow_button.cpp
	src/qwt_clipper.cpp
	src/qwt_color_map.cpp
	src/qwt_compass.cpp
	src/qwt_compass_rose.cpp
  )
  
set( MOC_HEADERS
	src/qwt_text_label.h
	src/qwt_thermo.h
	src/qwt_wheel.h
	src/qwt_counter.h
	src/qwt_dial.h
	src/qwt_dyngrid_layout.h
	src/qwt_knob.h
	src/qwt_legend.h
	src/qwt_legend_item.h
	src/qwt_magnifier.h
	src/qwt_panner.h
	src/qwt_picker.h
	src/qwt_plot.h
	src/qwt_plot_canvas.h
	src/qwt_plot_magnifier.h
	src/qwt_plot_panner.h
	src/qwt_plot_picker.h
	src/qwt_plot_zoomer.h
	src/qwt_scale_widget.h
	src/qwt_slider.h
	src/qwt_abstract_slider.h
	src/qwt_analog_clock.h
	src/qwt_compass.h
)

qt_wrap_cpp(qwt MOC_FILES ${MOC_HEADERS})

add_library( qwt SHARED ${SRC_FILES} ${INC_FILES} ${MOC_FILES})
set_target_properties ( qwt PROPERTIES COMPILE_DEFINITIONS QWT_MAKEDLL )
include_directories(
"${QT_QTCORE_INCLUDE_DIR}/.."
${QT_QTCORE_INCLUDE_DIR}
${QT_QTGUI_INCLUDE_DIR}
${QT_QTSVG_INCLUDE_DIR}
)

target_link_libraries(qwt
${QT_QTCORE_LIBRARY}
${QT_QTGUI_LIBRARY}
${QT_QTSVG_LIBRARY}
)
